# orchestration-recipes

./: .env  .gitignore  README.md  dagster_defs.py  dagster_resources.py  pyproject.toml  test_airflow_dag.py  test_dagster_defs.py
airflow-pipeline-with-spark/: .envrc  README.md  pyproject.toml  test_airflow_dag_wip.py
airflow-pipeline-with-spark/airflow_dags/: dag.py
airflow-with-spark/: .env  .gitignore  README.md  pyproject.toml
airflow-with-spark/dags/: dag.py
airflow_dags/: dag.py
dagster-pipeline-with-spark/: README.md  dagster_defs.py  pyproject.toml
dagster-with-spark/: .envrc  .gitignore  defs.py  pyproject.toml
file-submission/: .gitignore  pyproject.toml
file-submission-to-airflow/: submit.py
submit-file-to-airflow/: .env  .gitignore  README.md  notebook.ipynb  pyproject.toml  util.py
submit-file-to-airflow/airflow_dags/: dag.py
submit-file-to-airflow/film-files/: films.csv
submit-file-to-dagster/: README.md  defs.py  notebook.ipynb  util.py
submit-file-to-dagster/film-files/: best_mikkelsen_films.csv
