[project]
name = "airflow-vs-dagster"
version = "0.1.0"
description = "Simple Airflow and Dagster projects involving PySpark"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.1.3",
    "apache-airflow-providers-apache-spark>=5.3.4",
    "dagster>=1.12.1",
    "dagster-pyspark>=0.28.1",
    "dagster-webserver>=1.12.1",
    "pandas>=2.3.3",
    "pyspark>=4.0.1",
    "pytest>=9.0.1",
]
