[project]
name = "dagster-pipeline-with-spark"
version = "0.1.0"
description = "Dagster pipeline with PySpark for data processing"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.12.1",
    "dagster-pyspark>=0.28.1",
    "dagster-webserver>=1.12.1",
    "pandas>=2.3.3",
    "pyspark>=4.0.1",
    "pytest>=9.0.1",
    "requests>=2.31.0",
]
