[project]
name = "dagster-with-spark"
version = "0.1.0"
description = "Simple dagster example involving an IOManager for PySpark"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.12.1",
    "dagster-pyspark>=0.28.1",
    "dagster-webserver>=1.12.1",
    "pandas>=2.3.3",
    "pyspark>=4.0.1",
    "pytest>=9.0.1",
]
