[project]
name = "dagster-file-submission"
version = "0.1.0"
description = "Proof of concept for submitting an external file to a dagster orchestrator"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.12.1",
    "dagster-webserver>=1.12.1",
    "pandas>=2.3.3",
    "pandera[pandas]>=0.27.0",
]
